manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authorization
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: authorization.lazycomputing.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authorization
                port:
                  number: 8080
